src/objects/SOS_Time_Off_Request__c.object
<CustomObject>
    <fields>
        <fullName>AA_Email__c</fullName>
        <defaultValue>$User.AA_Email__c</defaultValue>
        <label>AA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SOS_Time_Off_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Rejectd_Date__c</fullName>
        <label>Manager Approved/Rejectd Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Rejectd_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved/Rejectd by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SOS_Time_Off_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Employee Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Owner:User.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <defaultValue>$User.FirstName+&apos; &apos;+ $User.LastName</defaultValue>
        <label>Employee Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <defaultValue>$User.EmployeeNumber</defaultValue>
        <label>Employee Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Director_Email__c</fullName>
        <defaultValue>$User.Field_Director_Email__c</defaultValue>
        <label>Field Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field_Director_Name__c</fullName>
        <defaultValue>$User.Field_Director_Name__c</defaultValue>
        <label>Field Director Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Department_Notes__c</fullName>
        <label>Finance Department Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you select this total hours should be multiple of 8.</inlineHelpText>
        <label>Full Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Graveyard_Shift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graveyard Shift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Approved_Rejected_Date__c</fullName>
        <label>HR Approved/Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Comments__c</fullName>
        <label>HR Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HR_Pending_Date__c</fullName>
        <label>HR Pending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Non_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Non Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quick_Sick_Leave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quick Sick Leave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Comments__c</fullName>
        <label>Manager Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <defaultValue>$User.SOS_Manager_Name__c</defaultValue>
        <label>Manager Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Pending_Date__c</fullName>
        <label>Manager Pending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SOS_Time_Off_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mgr_Name__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mgr Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewManager__c</fullName>
        <formula>Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewManager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_Time_Hours__c</fullName>
        <label>Total Overtime Hours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Submitted_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>Date of Time off Requested Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sick_Leave_Type__c</fullName>
        <description>Sick leave type</description>
        <label>Sick Leave Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Family Sick Leave</fullName>
                </value>
                <value>
                    <fullName>FMLA</fullName>
                </value>
                <value>
                    <fullName>Workers’ comp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>HR Pending</fullName>
                </value>
                <value>
                    <fullName>HR/Div. Direcor Pending</fullName>
                </value>
                <value>
                    <fullName>HR Approved</fullName>
                </value>
                <value>
                    <fullName>Manager Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <formula>Owner:User.Term_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Off_Balance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Off Balance</label>
        <referenceTo>SOS_Time_Off_Balance__c</referenceTo>
        <relationshipName>Time_Off_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Off_Remaining_by_type__c</fullName>
        <formula>CASE( Type__c , &apos;Vacation&apos;,IF(CONTAINS( Total_Hours_Requested_Hour_Day__c , &apos;Hour&apos;), TEXT(Time_Off_Balance__r.Vacation_Time_Remaining__c) + &apos; Hour(s)&apos;,  TEXT(Time_Off_Balance__r.Vacation_Time_Remaining__c/8) + &apos; Day(s)&apos;), &apos;Sick&apos;, IF(CONTAINS( Total_Hours_Requested_Hour_Day__c , &apos;Hour&apos;),TEXT(Time_Off_Balance__r.Sick_Time_Remaining__c) + &apos; Hour(s)&apos;, TEXT(Time_Off_Balance__r.Sick_Time_Remaining__c/8) + &apos; Day(s)&apos;) ,&apos;Unpaid&apos;, IF(CONTAINS( Total_Hours_Requested_Hour_Day__c , &apos;Hour&apos;),TEXT(Time_Off_Balance__r.Unpaid_Time_Remaining__c) + &apos; Hour(s)&apos;, TEXT(Time_Off_Balance__r.Unpaid_Time_Remaining__c/8) + &apos; Day(s)&apos;) ,&apos;Holiday work days&apos;,IF(CONTAINS( Total_Hours_Requested_Hour_Day__c , &apos;Hour&apos;),TEXT(Time_Off_Balance__r.Holiday_work_days_Time_Remaining__c) + &apos; Hour(s)&apos;, TEXT(Time_Off_Balance__r.Holiday_work_days_Time_Remaining__c/8) + &apos; Day(s)&apos;) ,&apos;Relief&apos;, IF(CONTAINS( Total_Hours_Requested_Hour_Day__c , &apos;Hour&apos;),TEXT(Time_Off_Balance__r.Relieve_Time_Remaining__c) + &apos; Hour(s)&apos;, TEXT(Time_Off_Balance__r.Relieve_Time_Remaining__c/8) + &apos; Day(s)&apos;) ,&apos;Birthday&apos;, IF(CONTAINS( Total_Hours_Requested_Hour_Day__c , &apos;Hour&apos;),TEXT(Time_Off_Balance__r.Birthday_Time_Remaining__c) + &apos; Hour(s)&apos;, TEXT(Time_Off_Balance__r.Birthday_Time_Remaining__c/8) + &apos; Day(s)&apos;),&apos;Float&apos;, IF(CONTAINS( Total_Hours_Requested_Hour_Day__c , &apos;Hour&apos;),TEXT(Time_Off_Balance__r.Float_Time_Remaining__c) + &apos; Hour(s)&apos;, TEXT(Time_Off_Balance__r.Float_Time_Remaining__c/8) + &apos; Day(s)&apos;) ,&apos;Bereavement&apos;, IF(CONTAINS( Total_Hours_Requested_Hour_Day__c , &apos;Hour&apos;),TEXT(Time_Off_Balance__r.Bereavement_Time_Remaining__c) + &apos; Hour(s)&apos;, TEXT(Time_Off_Balance__r.Bereavement_Time_Remaining__c/8) + &apos; Day(s)&apos;),&apos;Jury Duty&apos;, IF(CONTAINS( Total_Hours_Requested_Hour_Day__c , &apos;Hour&apos;),TEXT(Time_Off_Balance__r.Jury_Duty_Time_Remaining__c) + &apos; Hour(s)&apos;, TEXT(Time_Off_Balance__r.Jury_Duty_Time_Remaining__c/8) + &apos; Day(s)&apos;) ,&apos;Religious (OPEIU Only)&apos;,  IF(CONTAINS( Total_Hours_Requested_Hour_Day__c , &apos;Hour&apos;),TEXT(Time_Off_Balance__r.Religious_OPEIU_Only_Time_Remaining__c) + &apos; Hour(s)&apos;, TEXT(Time_Off_Balance__r.Religious_OPEIU_Only_Time_Remaining__c/8) + &apos; Day(s)&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Off Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Differential_Hours__c</fullName>
        <label>Total Differential Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Double_Over_Time_Hours__c</fullName>
        <label>Total Double Over Time Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Reported__c</fullName>
        <label>Total Hours Reported</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Requested_Hour_Day__c</fullName>
        <label>Total Hours/Days Requested</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Requested__c</fullName>
        <label>Total Hours/Days Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Regular_Over_Time_Hours__c</fullName>
        <label>Total Regular Over Time Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
                <value>
                    <fullName>Holiday work days</fullName>
                </value>
                <value>
                    <fullName>Birthday</fullName>
                </value>
                <value>
                    <fullName>Float</fullName>
                </value>
                <value>
                    <fullName>Bereavement</fullName>
                </value>
                <value>
                    <fullName>Jury Duty</fullName>
                </value>
                <value>
                    <fullName>Religious (OPEIU Only)</fullName>
                </value>
                <value>
                    <fullName>Overtime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Off Request / Overtime Request</label>
    <listViews>
        <fullName>All_Time_Off_Requests_Last_Year</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approved_Rejectd_by__c</columns>
        <columns>Sick_Leave_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cost_Center__c</columns>
        <columns>Request_Submitted_Date__c</columns>
        <columns>Employee_Type__c</columns>
        <columns>HR_Approved_Rejected_Date__c</columns>
        <columns>Manager__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Time_Off_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_YEAR</value>
        </filters>
        <label>All Time Off Requests Last Year</label>
        <language>en_US</language>
        <sharedTo>
            <group>HR_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Time_Off_Requests_This_Year</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approved_Rejectd_by__c</columns>
        <columns>Sick_Leave_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cost_Center__c</columns>
        <columns>Request_Submitted_Date__c</columns>
        <columns>Employee_Type__c</columns>
        <columns>HR_Approved_Rejected_Date__c</columns>
        <columns>Manager__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Time_Off_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>COMMUNICATIONS</value>
        </filters>
        <label>All Time Off Requests This Year</label>
        <language>en_US</language>
        <sharedTo>
            <group>HR_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Employee</fullName>
        <columns>NAME</columns>
        <columns>Approved_Rejectd_by__c</columns>
        <columns>Sick_Leave_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Request_Submitted_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Employee_Type__c</columns>
        <columns>HR_Approved_Rejected_Date__c</columns>
        <columns>Employee_Name__c</columns>
        <columns>Manager__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Time_Off_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Name__c</field>
            <operation>contains</operation>
            <value>Banuelos</value>
        </filters>
        <label>Employee</label>
        <language>en_US</language>
        <sharedTo>
            <group>HR_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Time_Off_Requests</fullName>
        <columns>NAME</columns>
        <columns>Approved_Rejectd_by__c</columns>
        <columns>Sick_Leave_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cost_Center__c</columns>
        <columns>Request_Submitted_Date__c</columns>
        <columns>Employee_Type__c</columns>
        <columns>HR_Approved_Rejected_Date__c</columns>
        <columns>Employee_Name__c</columns>
        <columns>Manager__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Time_Off_Balance__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Time Off Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>HR_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Req-{0000}</displayFormat>
        <label>Time Off Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOS Time Off Requests</pluralLabel>
    <recordTypes>
        <fullName>Overtime_Request</fullName>
        <active>true</active>
        <description>To create overtime request.</description>
        <label>Overtime Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_Off_Request</fullName>
        <active>true</active>
        <description>To create new time off request.</description>
        <label>Time Off Request</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>DateRangeExceededDays</fullName>
        <active>false</active>
        <errorConditionFormula>AND((Total_Hours_Requested__c &gt; CASE(MOD( Start_Date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( End_Date__c - Start_Date__c )/7)*5)), $User.Show_Balance_In_Days__c)</errorConditionFormula>
        <errorDisplayField>Total_Hours_Requested__c</errorDisplayField>
        <errorMessage>Total Days requested are exceeding the date range selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateRangeExceededHours</fullName>
        <active>false</active>
        <errorConditionFormula>AND((Total_Hours_Requested__c &gt; 8 * CASE(MOD( Start_Date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( End_Date__c - Start_Date__c )/7)*5)), NOT($User.Show_Balance_In_Days__c))</errorConditionFormula>
        <errorDisplayField>Total_Hours_Requested__c</errorDisplayField>
        <errorMessage>Total Hours requested are exceeding the date range selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NonExemptFullDay</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(MOD(Total_Hours_Requested__c  ,8)!=0,Total_Hours_Requested__c=0), NOT($User.Show_Balance_In_Days__c),Full_Day__c)</errorConditionFormula>
        <errorDisplayField>Total_Hours_Requested__c</errorDisplayField>
        <errorMessage>Total Hours Requested value should be multiples of 8 hours for full day request type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SOS</fullName>
        <active>false</active>
        <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date value should be greater than or equal to Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Hours_Requested_validation</fullName>
        <active>false</active>
        <errorConditionFormula>OR(Total_Hours_Requested__c = null, Total_Hours_Requested__c = 0)</errorConditionFormula>
        <errorMessage>Please enter a valid input.</errorMessage>
    </validationRules>
</CustomObject>